# TestCase

./: .gitignore  CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  thread_xy.h
src/: icons.qrc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  thread_xy.cpp  thread_xy.h
